z-index fixed

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,9 +2,11 @@
     /* position: absolute; */
     /* width: 1200px; */
     /* top: 16px; */
+    position: relative;
     display: flex;
     justify-content: space-between;
     margin: 16px 0 0 0;
+    z-index: 1;
 }
 
 .topbar__logo {
@@ -39,6 +41,7 @@
 .slider__items {
     display: flex;
     justify-content: space-between;
+    z-index: 1;
 }
 .slider__text {
     flex: 0 0 435px;
@@ -115,7 +118,6 @@
     width: 110%;
     height: 100%;
     object-fit: contain;
-    z-index: 1;
 }
 .slider__blur {
     position: absolute;
